Fixed bug #32429 (method_exists() always return TRUE if __call method exists)